# mjx-hermes-agent

./: .gitmessage  cli.py  package-lock.json
agent/: usage_pricing.py
apps/hermes-universal/: .env.benchmark  .gitignore  PORT.md  README.md  VOICE_HANDOFF.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.tsbuildinfo  vite.config.ts
apps/hermes-universal/bench/: index.html  pipeline-bench.mjs
apps/hermes-universal/src/: app.tsx  global.ts  hermes.test.ts  hermes.ts  main.tsx  styles.css  test-setup.ts
apps/hermes-universal/src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  build.rs  tauri.conf.json  tauri.external-vite.conf.json  tauri.prodweb.conf.json
apps/hermes-universal/src-tauri/capabilities/: default.json
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/: Cargo.toml  build.rs
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/android/: build.gradle.kts  tauri.plugin.json
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/android/src/androidTest/java/: KeyringInstrumentedTest.kt
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/android/src/main/java/: KeyringPlugin.kt
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/android/src/main/java/io/crates/keyring/: Keyring.kt
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/android/src/test/java/: KeyringServiceTest.kt
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/ios/: Package.swift  README.md
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/ios/Sources/: KeyringPlugin.swift
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/ios/Tests/PluginTests/: PluginTests.swift
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/permissions/: default.toml
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/permissions/autogenerated/: reference.md
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/permissions/autogenerated/commands/: has_password.toml  has_secret.toml  initialize_keyring.toml
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/permissions/schemas/: schema.json
apps/hermes-universal/src-tauri/plugins/tauri-plugin-keyring/src/: commands.rs  desktop.rs  error.rs  implementation.rs  lib.rs  mobile.rs  models.rs
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/: Cargo.toml  build.rs
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/android/: build.gradle.kts  tauri.plugin.json
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/android/src/main/: AndroidManifest.xml
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/android/src/main/java/: MicPlugin.kt
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/ios/: Package.swift
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/ios/Sources/: MicPlugin.swift
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/permissions/: default.toml
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/permissions/autogenerated/: reference.md
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/permissions/schemas/: schema.json
apps/hermes-universal/src-tauri/plugins/tauri-plugin-mic/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
apps/hermes-universal/src-tauri/src/: appearance.rs  audio.rs  cloud.rs  lib.rs  local_backend.rs  main.rs  marketplace.rs  oauth.rs  pty.rs  transport.rs
apps/hermes-universal/src-tauri/src/voice/: capture.rs  codec.rs  machine.rs  mod.rs  transcribe.rs  vad.rs
apps/hermes-universal/src/app/: connect-screen.tsx  layout-constants.ts  master-detail.tsx  mobile-controller.tsx  routes.test.ts  routes.ts  session-switcher.tsx
apps/hermes-universal/src/components/: error-boundary.tsx  haptics-provider.tsx  language-switcher.test.tsx  language-switcher.tsx  notifications.tsx  theme-picker.tsx
apps/hermes-universal/src/contrib/: plugins-store.ts  plugins.ts  runtime-loader.ts
apps/hermes-universal/src/dev/: markdown-bench.tsx
apps/hermes-universal/src/gateway/: index.ts  json-rpc-gateway.ts
apps/hermes-universal/src/hooks/: use-keyboard-inset.ts  use-resize-observer.ts
apps/hermes-universal/src/i18n/: context.tsx  en.ts  index.ts  ja.ts  types.ts  zh-hant.ts  zh.ts
apps/hermes-universal/src/lib/: action-poll.ts  api.test.ts  api.ts  auth.ts  chat-messages.ts  chat-runtime.ts  chat-tool-parts.test.ts  chat-tool-parts.ts  completion-sound.ts  desktop-fs.ts  desktop-git.ts  external-link.ts  external-link.tsx  format.ts  gateway-events.ts  haptics-tauri.test.ts  haptics-tauri.ts  icons.ts  katex-fonts.test.ts  katex-fonts.ts  katex-memo.test.ts  katex-memo.ts  kbd.ts  local-preview.ts  log-format.ts  markdown-preprocess.test.ts  markdown-preprocess.ts  media.ts  mic-permission.ts  persist.ts  persisted.test.ts  persisted.ts  platform.test.ts  platform.ts  project-idea-templates.test.ts  project-idea-templates.ts  reveal-path.ts  runtime-readiness.ts  safe-area.ts  scrollbars.ts  (+24 more)
apps/hermes-universal/src/store/: approval-mode.ts  atom.test.tsx  atom.ts  chat.test.ts  chat.ts  cloud.test.ts  cloud.ts  coding-status.ts  command-menu.ts  completion-sound.ts  composer-popout.ts  composer-status.ts  composer.ts  connection.test.ts  connection.ts  cron.test.ts  cron.ts  default-project-dir.ts  embed-consent.ts  gateway-config.test.ts  gateway-config.ts  gateway-restore.test.ts  gateway-restore.ts  gateway-switch.test.ts  gateway-switch.ts  gateway.ts  haptics.ts  hub.test.ts  hub.ts  keybinds.test.ts  keybinds.ts  layout.ts  marketplace.ts  (+59 more)
apps/mobile/: .gitignore  PORT.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/mobile/src/: app.tsx  hermes.ts  main.tsx  styles.css  test-setup.ts
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: lib.rs  main.rs  transport.rs
contributors/emails/: jay@live.co.in
hermes_cli/: web_server.py
scripts/: release.py
tests/agent/: test_usage_pricing.py
tests/hermes_cli/: test_web_server_shell_pty.py
(+400 files in other folders)
