[package]
name = "hermes-universal"
version = "0.0.1"
description = "Hermes Universal — Tauri v2 client (desktop + Android + iOS from one codebase)."
authors = ["Nous Research <info@nousresearch.com>"]
edition = "2021"
rust-version = "1.77"

# The library target is what the Android/iOS project links against, so the
# cdylib/staticlib crate-types are mandatory for the mobile targets. The name
# must match what src/main.rs (desktop) and the generated mobile entry call.
[lib]
name = "hermes_universal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured logging — on Android these route to logcat via the `android_logger`
# init that tao/wry performs on startup, so `log::` calls are visible with
# `adb logcat`. Used for connect/OAuth diagnostics on mobile.
log = "0.4"

# Platform detection (A5): lets the frontend tell Android from a desktop Tauri
# build so it can gate mobile-only behaviour (e.g. hide Local gateway mode).
tauri-plugin-os = "2"

# Secure credential storage (D1): real OS-native keystore via keyring-core 1.0 —
# Android SharedPreferences encrypted by the Android Keystore, iOS/macOS Keychain,
# Windows Credential Manager, Linux Secret Service. Silent (no biometric prompt).
# VENDORED under plugins/ (from charlesportwoodii/tauri-plugin-keyring) to drop its
# unused specta scaffold deps, which don't build on stable Rust — see that crate's
# Cargo.toml. FIXME(D1): switch to a crates.io release once one exists.
tauri-plugin-keyring = { path = "plugins/tauri-plugin-keyring" }

# Microphone OS-permission (R10, voice). In-tree plugin: durably declares Android
# RECORD_AUDIO/MODIFY_AUDIO_SETTINGS (merged from a committed manifest, since gen/
# is gitignored) + a check/request seam for Android/iOS. Capture itself stays in
# the webview (getUserMedia); desktop is a no-op. See plugins/tauri-plugin-mic.
tauri-plugin-mic = { path = "plugins/tauri-plugin-mic" }

# Open external links in the system browser (Gc6/R11).
tauri-plugin-opener = "2"

# Haptic feedback on send/approval (Gc10/R9).
tauri-plugin-haptics = "2"

# File attachments (Gc8/R7): native picker + read the picked file to a data-URL.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Native OS notifications (Ic10/R8): turn-done / approval / error while backgrounded.
tauri-plugin-notification = "2"

# Transport core (Step 2a): all HTTP + WS traffic runs here, not in the webview,
# so there is no CORS constraint and we can talk to any backend on the LAN.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
# Random session token for the local-spawn backend (E3.a, desktop-only).
getrandom = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# rustls so we don't need OpenSSL/NDK-cross OpenSSL on the Android build.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
# Enable BOTH root sources: native-roots so desktop honors the OS trust store (corporate
# / self-signed CAs), AND webpki-roots as the fallback. Android exposes no file-based
# native cert store, so native-roots alone fails at the wss:// handshake with "no native
# root CA certificates found"; with webpki-roots also enabled tokio-tungstenite suppresses
# that error and uses the bundled Mozilla roots (the same set reqwest's `rustls-tls` uses).
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots"] }
# Pin the rustls crypto provider explicitly (see lib.rs): tokio-tungstenite's
# wss:// path calls ClientConfig::builder(), which needs a process-default provider.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# VS Code Marketplace theme install (marketplace.rs): a `.vsix` is a plain zip, so
# we unzip the extension and pull its color-theme JSON out. deflate-only (pure-Rust
# flate2/miniz_oxide backend) — no native codec deps, so it stays cross-platform
# incl. the Android/iOS NDK build.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Explicit, serializable cookie jar (D3.a/D4): replaces reqwest's private default
# jar so the OAuth flow (oauth.rs) can share one store across a redirect-following
# and a redirect-disabled client, and so session cookies can be serialized to the
# keyring and rehydrated across launches (R2b).
reqwest_cookie_store = "0.8"
# Direct handle on the cookie store's JSON (de)serialization (D4/R2b) — reqwest_cookie_store
# re-exports the store type but not its serde helpers.
cookie_store = "0.21"

# Local shell PTY for the right-pane terminal (pty.rs, desktop-only). Cross-platform
# PTY: Unix openpty / Windows ConPTY. Gated OFF the mobile targets — a phone has no
# local shell, the right pane isn't shown there, and this keeps it out of the NDK build.
#
# Native audio capture + encode (audio.rs, voice/MJX-88). Desktop-only for now
# (Phase A): the WebKitGTK MediaRecorder is broken on Linux, so we capture PCM via
# cpal (ALSA/CoreAudio/WASAPI) and encode with pure-Rust codecs — no system
# GStreamer/libav, no C toolchain. Mobile keeps the working webview MediaRecorder
# until Phase B flips it to cpal's `oboe` (Android) / CoreAudio (iOS) backend, which
# needs NDK/`oboe` build wiring — hence gated OFF the mobile NDK build here.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
portable-pty = "0.9"
# Cross-platform microphone capture (raw PCM). ALSA on Linux (links libasound2),
# CoreAudio on macOS, WASAPI on Windows. `jack` feature left OFF (no libjack dep).
cpal = "0.15"
# Pure-Rust anti-aliased sample-rate conversion → 16 kHz mono for whisper.
rubato = "0.16"
# Pure-Rust WAV encoder (default output; gateway maps audio/wav → .wav).
hound = "3.5"
# Pure-Rust FLAC encoder (optional compressed output; gateway maps audio/flac → .flac).
flacenc = "0.4"
# Encode the clip for IPC. Tauri serializes a Rust `Vec<u8>` as a JSON number array
# (~4x bloat for a ~1 MB clip); base64 keeps the hop small and is what the transcribe
# endpoint ultimately wants anyway (it takes a `data:` URL). Already in the lock tree.
base64 = "0.22"

# Route Rust `log::` output to logcat on Android. tao does not reliably install a
# logger, so our connect/OAuth diagnostics were invisible; init it ourselves in
# `run()`. Android-only — desktop uses stdout.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

# GTK (Linux only) — window translucency sets the GTK toplevel's opacity
# (appearance.rs). Version pinned to Tauri's gtk to avoid a duplicate in the tree.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
# WebKitGTK (Linux only) — the desktop webview auto-DENIES getUserMedia unless the
# embedder answers WebKitWebView's `permission-request` signal. wry doesn't, so we
# allow microphone requests ourselves (see lib.rs). Version matches wry's webkit2gtk
# (0.55 → 2.0.2) to avoid a duplicate in the tree; `v2_8` exposes the
# UserMediaPermissionRequest type used to scope the allow to mic/camera only.
webkit2gtk = { version = "2.0", features = ["v2_8"] }
