[package]
name = "hermes-mobile"
version = "0.0.1"
description = "Hermes Mobile — Tauri v2 Android client (remote-only chat)."
authors = ["Nous Research <info@nousresearch.com>"]
edition = "2021"
rust-version = "1.77"

# The library target is what the Android/iOS project links against, so the
# cdylib/staticlib crate-types are mandatory for the mobile targets. The name
# must match what src/main.rs (desktop) and the generated mobile entry call.
[lib]
name = "hermes_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Step 2 will add the transport core here (reqwest + tokio-tungstenite). Kept
# minimal for Step 1 so the first Android build is as small/fast as possible.
