# VENDORED from https://github.com/charlesportwoodii/tauri-plugin-keyring
# @ b0a137bab0c3e592c637c32c328040d86f28256a (branch master). Vendored (not a git
# dep) solely to DROP the unused `tauri-specta`/`specta` scaffold deps: the
# published specta 2.0.0-rc.25 uses the unstable `fmt::from_fn` (nightly-only) and
# won't compile on stable Rust. The plugin code never references specta, so
# removing the deps is a zero-code-change fix. No upstream LICENSE file exists —
# FIXME(D1): confirm licensing / switch to a crates.io release when available.
[package]
name = "tauri-plugin-keyring"
version = "0.2.1"
authors = ["Charles R. Portwood II", "Hermes Universal (vendored)"]
description = "Native device keyring (keyring-core 1.0) for Tauri v2 — Android Keystore / iOS Keychain / desktop."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-keyring"

[features]
default = ["dbus-secret-service"]
# Linux backends (mutually exclusive). dbus-secret-service is the default.
dbus-secret-service = ["dbus-secret-service-keyring-store"]
linux-keyutils = ["linux-keyutils-keyring-store"]

[dependencies]
tauri = { version = "^2" }
serde = "1.0"
thiserror = "2"
keyring-core = "1.0.0"
base64 = "0.22"
tauri-plugin-log = "^2"
# NOTE: upstream also declared `tauri-specta` + `specta` here; both are unused by
# the plugin source and pull specta 2.0.0-rc.25 (nightly-only). Removed.

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
# `protected` enables the Protected Data store used on both macOS and iOS
# (required on iOS, where the crate errors without it).
apple-native-keyring-store = { version = "1.0.0", features = ["protected"] }

[target."cfg(any(target_os = \"windows\"))".dependencies]
windows-native-keyring-store = "1.1.0"

[target."cfg(any(target_os = \"android\"))".dependencies]
android-native-keyring-store = "1.0.0"

[target."cfg(any(target_os = \"linux\"))".dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"], optional = true }
linux-keyutils-keyring-store = { version = "1.0.0", optional = true }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
